@@ -1,6 +1,7 @@
 03/10/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.2.911 'Marshal West':
-	- memory management improvements.
+	- memory management improvements;
+	- socket logging improvements. 
 	
 03/09/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.2.910 'Marshal West':
